--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 	<meta charset="utf-8">
 	<title>Rassilon, Omega, and that Other Guy</title><meta name="author" content="William B. Swift">
 	<meta name="description" content="Main homepage, index, and table of contents"> 
@@ -10,8 +9,7 @@
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png">
 	<style>
-	</style>
-</head>
+	</style></head>
 
 <body>
 	<script>
@@ -244,7 +242,7 @@
 						<a href="roogallifrey.html#animals">Animals</a>
 					</li>
 					<li>
-						<a href="roogallifrey.html#ancient">Ancient Gallifreyan Biology</a>
+						<a href="roogallifrey.html#ancient">SHOBOGAN Biology</a>
 					</li>
 				</ul>
 			</div>
