--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -217,7 +217,7 @@
 						<a href="#animals">Animals</a>
 					</li>
 					<li>
-						<a href="#ancient">Ancient Gallifreyan Biology</a>
+						<a href="#ancient">SHOBOGAN Biology</a>
 					</li>
 				</ul>
 			</div>
@@ -817,11 +817,7 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 					<span class="A-audiobook"> Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived if they are not killed, sometimes kept as pets),
 						Vex (burrowing animal), Gallifreyan Womprats (1 meter long rats with fifteen legs), Pig-Rats, Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
 					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
-					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed">
-wolf-like creatures (with very long snouts and black-and-white striped
-fur that are almost as big as adult humanoid), Broakir (live in
-foothills and are often hunted for food), Baanjxx (arboreal browser,
-eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
+					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed"> wolf-like creatures (with very long snouts and black-and-white striped fur that are almost as big as adult humanoid), Broakir (live in foothills and are often hunted for food), Baanjxx (arboreal browser, eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 						</span> The Gallifreyan Marlot is purple and unique in all of time and space. The Doctor and Ruath
 						<span class="A-licensed">
 						re-</span>introduced cats into the eco-system </span>
@@ -837,12 +833,13 @@ eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 			</div>
 			<div class="article" id="ancient" style="padding-top: 130px; margin-top: -130px;">
 				<figure>
+					<img src="images/tecteun1.jpg" alt="Shobogan">
 					<img src="images/marshman.jpg" alt="Marshman">
-					<figcaption class="A-fanon">An example of a pre-Neanderthal Gallifreyan?</figcaption>
+					<figcaption><span class="A-tv">A Shobogan </span><span class="A-fanon">and a possible pre-Neanderthal Gallifreyan?</span></figcaption>
 				</figure>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
-				<h2>ANCIENT (Pre-Rassilon) GALLIFREYANS</h2>
-				<div class="section">
+				<h2>SHOBOGANS (Pre-Rassilon Gallifreyans)&nbsp;</h2>
+				<div class="section A-tv">
 					<span class="A-audiobook">The first Neanderthal Gallifreyans evolved </span>
 					<span class="A-fanon"> about 10 million years before the time of Rassilon. </span>
 					<span class="A-audiobook">They are the first sentient humanoids to appear in the Universe. As such their morphic fields increase the chances of
@@ -856,21 +853,18 @@ eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 					<span class="A-audiobook">The Constructors of Destiny modify the Gallifreyan Neanderthals to fulfill their destiny.
 						<span class="A-fanon">This </span>
 						<span class="A-tv">exposure to the Untempered Schism, over billions of years of evolution, allows the Gallifreyans to become sensitive
-							to time </span>and its movement. </span>
+							to time </span>and its movement. <span class="A-tv">They called themselves the Shobogans.</span>&nbsp; </span>
 				</div>
 				<div class="section">
 					<figure>
+						<img src="images/shobogankid.jpg" alt="Gallifreyan child">
 						<img src="images/Gallifreyan%2016.jpg" alt="Gallifreyan 16">
-						<img src="images/Doc%20100.jpg" alt="Gallifreyan 100 year old">
-						<img src="images/doc%20900.jpg" alt="Gallifreyan 900 year">
-						<figcaption class="A-tv">An example of Gallifreyans who are 16, over 100 and over 900 years old, respectively</figcaption>
+						<img src="images/doc100.jpg" alt="Gallifreyan 100 year old">
+						<img src="images/doc900.jpg" alt="Gallifreyan 900 year">
+						<figcaption class="A-tv">An example of Gallifreyans who are a young child, 16, over 100 and over 900 years old, respectively</figcaption>
 					</figure>
-					<span class="A-audiobook">These early Gallifreyans had only one heart 
-						<span class="A-licensed">and most deaths were a result of heart failure.</span>
-					</span>
-					<span class="A-audiobook">
-						<span class="A-tv">
-							<span class="A-licensed">Ancient </span>Gallifreyans did have a bypass respiratory system. When used, the bypass system makes them very resistant
+					<span class="A-audiobook">These Shobogans had only one heart 
+						<span class="A-licensed">and most deaths were a result of heart failure. &nbsp;Shobogans</span> </span><span class="A-audiobook"><span class="A-tv">did have a bypass respiratory system. When used, the bypass system makes them very resistant
 							to most forms of anesthetic
 							<span class="A-audiobook">(but not </span>
 						</span>
@@ -886,11 +880,7 @@ eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 						<span class="A-game">But they must remain completely calm to use it. Any pain or unexpected shock will can cause them to exhale the air
 							in their lungs. </span>
 					</span>
-					<span class="A-audiobook">They can hold their breath for hours if they don't move much. </span>
-					<span class="A-audiobook">Ancient
-Gallifreyans had the same resistance to being frozen solid that modern
-Gallifreyans do. Their blood, hormones and pheromones of ancient
-Gallifreyans is distinctly different from modern Gallifreyans. </span>
+					<span class="A-audiobook">They can hold their breath for hours if they don't move much.&nbsp;</span><span class="A-audiobook">Shobogans had the same resistance to being frozen solid that modern Gallifreyans do. Their blood, hormones and pheromones of the ancient Shobogans is distinctly different from modern Gallifreyans. </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">They
@@ -917,71 +907,32 @@ Gallifreyans is distinctly different from modern Gallifreyans. </span>
 						up reinforcing the emotions of a group. </span>
 				</div>
 				<div class="section">
-					<span class="A-audiobook">
-						<span class="A-fanon">
-							<span class="A-game">
-								<span class="A-audiobook">
-									<span class="A-licensed"> The official documents and records stated that</span> ancient Gallifreyans </span>
-								<span class="A-licensed">had a normal life-span of 300 years and</span>
-								<span class="A-audiobook">had no chance of living more then a few centuries. </span>
-							</span>
-						</span>
-					</span>
-					<span class="A-tv">Without the regenerative powers of modern Gallifreyans, a Gallifreyan would</span>
-					<span class="A-tv">be confined to wheelchairs before they reached 200 years old. </span>
-					<span class="A-tv">If their life was prolonged 700 years beyond that point the subject's body would atrophie until he's only a few feet
-						tall. </span>
-					<span class="A-audiobook">
-						<span class="A-fanon">
-							<span class="A-game">
-								<span class="A-infinity">However, some Ancient Gallifreyans were of the opinion that they would live forever if they avoided accidents.
-									<span class="A-game"> It is know that the rule of the 508 Pythias spanned 8,000,000 years.
-										<span class="A-licensed">The bodies of the dead were usualy burned in a pyre. </span>
-									</span>
-								</span>
-							</span>
-						</span>
-					</span>
+					<span class="A-licensed"> The official documents and records stated that</span><span class="A-audiobook"> Shobogans </span><span class="A-licensed">had a normal life-span of 300 years and </span><span class="A-audiobook">had no chance of living more then a few centuries. </span>
+					<span class="A-tv">Without the regenerative powers of modern Gallifreyans, a Gallifreyan would be confined to wheelchairs before they reached 200 years old. If their life was prolonged 700 years beyond that point the subject's body would atrophie until he's only a few feet tall. </span>
+					<span class="A-licensed">The bodies of the dead were usualy burned in a pyre.</span>
 				</div>
 				<div class="section">
-					<span class="A-audiobook">By human standards ancient Gallifreyans were
+					<span class="A-infinity">However, Shobogans that were given the Timeless Child's gift of unlimited regeneration were could live forever if they avoided accidents.</span>
+					<span class="A-game"> It is know that the rule of the 508 Pythias spanned 8,000,000 years. <span class="A-fanon">This could be because the Pythias had access to the elixier of Karn, or perhapse they too had received the gift of unlimited regenerations. </span></span>
+				</div>
+				<div class="section">
+					<span class="A-audiobook">By human standards Shobogans were
 						<span class="A-game">stronger,</span> more athletic, and </span>
-					<span class="A-audiobook">significantly taller then an average human</span><span class="A-audiobook">. The Gallifreyan women tended to be much taller then Gallifreyan males (this changed after when the looms were created).
-						The women also tended to have well developed muscles. </span>
-					<span class="A-tv">While </span>
-					<span class="A-tv">the ancient Gallifreyans </span>
-					<span class="A-tv"> lacked the regenerative powers of modern Gallifreyans,</span>
-					<span class="A-audiobook">
-						<span class="A-fanon">
-							<span class="A-game"> they had powers and abilities that, in the modern era, are considered to be nothing buy myth and superstitions. </span>
-						</span>
-					</span>
-					<span class="A-audiobook">
-						<span class="A-fanon">It is possible they might have had the telepathic, adaptive, and regenerative abilities similar to the Marshmen from
-							Alzarius. </span>
-						<span class="A-licensed">
-							<span class="A-audiobook">Some were powerful seers and visionaries
-								<span class="A-licensed">and many had telekinetic powers. </span>
-							</span>
-						</span>
-					</span>
-					<span class="A-audiobook">It is know that they were much more powerful telepaths, and the adult minds of the planet were in constant telepathic
-						entrelacement due to an organ located in their hypothalamus</span>
-					<span class="A-audiobook">. This was thought to be the greatest curse of Gallifreyan civilization. One Gallifreyan every 1,000 years was born
-						an Individual. Individuals could shield their minds from telepathy and had other psionic powers. When young, Individuals
-						also made good time pilots.
-						<span class="A-fanon"> </span>
-						<span class="A-game">
-							<span class="A-fanon">Because of their ability to focus </span>older Individuals often became great philosophers, scientists, and explorers.
-							Many became Heroes. </span>
-					</span>
+					<span class="A-audiobook">significantly taller then an average human. The Shobogan women tended to be much taller then Shobogan males (this changed after when the looms began creating modern Gallifreyans). The women also tended to have well developed muscles. </span>
+					<span class="A-tv">While the Shobogans lacked the regenerative powers of modern Gallifreyans, </span><span class="A-audiobook">it is know that they were much more powerful telepaths, and the adult minds of the planet were in constant telepathic entrelacement due to an organ located in their hypothalamus. This was thought to be the greatest curse of Shobogan civilization. </span><span class="A-fanon">It is possible they might have had the telepathic, adaptive, and healing abilities similar to the Marshmen from Alzarius.</span>
 				</div>
 				<div class="section">
-					<span class="A-audiobook">The ancient Gallifreyans would be basically extinct
+					<span class="A-audiobook">Approximately every 1,000 years a Shobogan was born who could shield their minds from telepathy and had more psionic powers. They were known as Individuals </span><span class="A-game">and they had powers and abilities that, in the modern era, are considered to be nothing buy myth and superstitions. </span>			
+					<span class="A-audiobook">Some were powerful seers and visionaries </span>
+					<span class="A-licensed">and many had telekinetic powers. </span>	
+					<span class="A-audiobook">When children, Individuals also made good time pilots. </span><span class="A-fanon">Because of their ability to focus </span><span class="A-game">older Individuals often became great philosophers, scientists, and explorers. Many became Heroes. </span>
+				</div>
+				<div class="section">
+					<span class="A-audiobook">The ancient Shobogans would be virtually extinct
 						<span class="A-licensed">a few hundred years</span> after the last Pythia cursed the entire species with sterility. Fortunately, by that point,
-						Rassilon and his followers had developed an alternative means of reproduction. </span>
-					<span class="A-fanon">For more details on the modern species of Gallifreyans see the
-						<a href="roobiology.html">Gallifreyan Biology Page</a>.</span>
+						Rassilon and his followers had developed an alternative means of reproduction. Over time the term Shobogans became slang for any Gallifreyan who rejects the traditions and culture of Rassilon’s Time Lords.</span>
+					<span class="A-fanon">For more details on the modern species of Gallifreyans see the </span>
+					<a href="roobiology.html">Gallifreyan Biology Page</a>
 				</div>
 			</div>
 		</div>
