--- a/rootimeline1.html
+++ b/rootimeline1.html
@@ -3268,25 +3268,17 @@ will be abandoned by the time of the 7th Doctor <span class="A-fanon">(probably 
 					<br>
 				</span>
 				<span class="A-notbbc">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; </span>
-				<span class="A-notbbc">The member of the previous universe's High Council known as the Renegade enters this Universe and becomes the Other.</span>
-				<span class="A-audiobook">
-					<span class="A-notbbc"> </span>&nbsp;
-					<span class="A-infinity">The Other's father might have been the Doctor.&nbsp;
-						<span class="A-game"> </span>
-					</span>
-				</span>
+				<span class="A-notbbc">The member of the previous universe's High Council known as the Renegade enters this Universe and becomes the Other. </span>
+				<span class="A-infinity">The Other's father might have been the Doctor. </span>
 				<span class="A-infinity">
 					<span class="A-game">The Other will become
-					</span> Patience's future lover</span><span class="A-infinity">.</span>
-				<span class="A-audiobook">&nbsp;
+					</span> Patience's future lover. </span>
 					<span class="A-licensed">
-						Patience's granddaughter Susan will be related to Rassilon, but the Doctor is not.</span>
-				</span>
+						Patience's granddaughter Susan will be related to Rassilon, but the Doctor is not. </span>
 				<span class="A-audiobook">
-					<span class="A-infinity">&nbsp; </span>
-					<span class="A-licensed">The Other might have been a CAT (Calculating Animal with a Tail). &nbsp;
-						<span class="A-audiobook">Such CATs were highly revered on Gallifrey.</span>
-					</span>&nbsp;
+					<span class="A-licensed">The Other might have been a CAT (Calculating Animal with a Tail). 
+						<span class="A-audiobook">Such CATs were highly revered on Gallifrey. </span>
+					</span>
 				</span>
 				<span class="A-licensed">According to the "Scrolls of Rassilon" the Other is a renegade/criminal Time Lord who came back in time&nbsp;from a point
 					well after the Time of Legend.&nbsp; </span>
@@ -3524,18 +3516,11 @@ while be watched over by Time. </span>
 				<span class="A-audiobook">Amnoni</span>
 				<span class="A-audiobook">)
 					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Quennesander Olyesti Pekkary of
-					the House of Fordfarding is born.&nbsp; He is Rassilon's nephew</span>
-				<span class="A-audiobook">.
+					the House of Fordfarding is born.&nbsp; He is Rassilon's nephew.</span>
 					<br>
-				</span>
 			</p>
 
-			<span class="A-fanon">-120??
-			</span>
-			<span class="A-audiobook">
-				<span class="A-fanon">&nbsp; &nbsp;
-				</span>&nbsp;&nbsp;
-			</span>
+			<span class="A-fanon">-120??&nbsp; &nbsp;&nbsp;&nbsp;</span>
 			<span class="A-audiobook">Amnoni Distuyssor Lorizhon, oldest daughter of&nbsp; the ancient House of Blyledge is born.
 				<span class="A-fanon">&nbsp;</span> She eventually becomes Second Officer of the Chronoscaphe.&nbsp; Blyledge is one of the senior houses in
 				the Prydon Chapter of Glorious Gallifrey.&nbsp; The House of Blyledge is an angular small dark building that is older
@@ -3543,9 +3528,16 @@ while be watched over by Time. </span>
 			<span class="A-audiobook">&nbsp; It has a walled garden of silver trees in its center
 				<span class="A-infinity">and </span>
 			</span>
-			<span class="A-infinity">is within visual sight of the Capitol.</span>
-			<span class="A-audiobook">&nbsp;</span>
-
+			<span class="A-infinity">is within visual sight of the Capitol. </span>
+			<div style="text-align: center;">
+				<center>
+					<p>
+						<img alt="" src="images/patience.jpg">
+						<br>
+						<span class="A-game">Patience?</span>
+					</p>
+				</center>
+			</div>
 			<p>
 				<span class="A-game">-110~</span>
 				<span class="A-audiobook">
