--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -346,9 +346,16 @@
 				<span class="A-infinity">(shortly after getting married)
 					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Patience's husband
 					<span class="A-game">(Omega)</span> is very busy rebuilding Gallifrey.</span>
+			<div style="text-align: center;">
+				<center>
+					<p>
+						<img alt="" src="images/patience.jpg">
+						<br>
+						<span class="A-game">Patience?</span>
+					</p>
+				</center>
+			</div>
 				<span class="A-infinity">
-					<br>
-					<br>
 					<span class="A-game">??&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (before the Qqaba mission)
 						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Patience and the Other begin having an affair
 						behind Omega's back. </span>
@@ -540,14 +547,14 @@ ceremonial events <span class="A-audiobook">
 						<span class="A-audiobook">after the looms / before unlimited time travel / almost certainly after the Vampires are released / </span>day 107)
 					</span>
 					<span class="A-licensed">
-						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the
+						<br><big><big><big> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the
 						concept of
 						<span class="A-tv"> regeneration</span>
-					</span>
+					</big></big></big></span>
 					<span class="A-licensed">
 						<span class="A-audiobook">
-							<span class="A-licensed">and creates the Immortality Virus.&nbsp;
-								<br>
+							<span class="A-licensed"><big><big><big>and creates the Immortality Virus.&nbsp;
+								</big></big></big><br>
 							</span>
 						</span>
 					</span>
@@ -581,9 +588,7 @@ V-Factor in the Immortality Virus.</span>
 							</span>
 							<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Legacy of Rassilon
 							<span class="A-licensed">
-								(aka the Immortality Virus)</span> is perfected
-							<span class="A-licensed">by the Biosynthesist Thremix </span>
-							<span class="A-audiobook">in secret.</span>
+								(aka the Immortality Virus)</span> is perfected by&nbsp;<span class="A-licensed">the Biosynthesist&nbsp;</span></span></span><span class="A-audiobook"><span class="A-tv">Tectuen&nbsp;</span></span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed"></span><span class="A-audiobook">in secret.</span>
 						</span>
 					</span>
 					<span class="A-fanon">
@@ -612,7 +617,7 @@ V-Factor in the Immortality Virus.</span>
 						</span>
 					</span>
 					<span class="A-audiobook">
-						<span class="A-licensed">Rassilon is quite obsessed in the possibility of immortality and funds Thremix's experiments.&nbsp;</span>Rassilon
+						<span class="A-licensed">Rassilon is quite obsessed in the possibility of immortality and funds Tectuen's experiments.&nbsp;</span>Rassilon
 						keeps the discovery secret for now but makes plans to give the Immortality Virus </span>
 					<span class="A-licensed">
 						<span class="A-audiobook">only to Loom-Born (which Rassilon views as the elite of Gallifreyan society).&nbsp;Once the Virus is ready, all of
@@ -3334,8 +3339,10 @@ generate time storms. </span><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 					<span class="A-audiobook">(after the first Otherstide)</span>
 					<span class="A-tv">
-						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Rassilon discovers the secret of Perpetual
-						Bodily Regeneration - True immortality</span>
+						<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; Rassilon discovers the Timeless Child's secret of
+Perpetual Bodily Regeneration - True immortality</span>
 					<span class="A-fanon"> that made him immune to </span>
 					<span class="A-audiobook">longing for death most Gallifreyans experience after 10,000 years of life.</span>
 				</p>
@@ -4231,8 +4238,7 @@ temporal grace system is capable of disabling the gun.</span><span class="A-audi
 						</span>
 					</span>
 					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; A communicable version of the Immortality
-					Virus (regeneration) is created and released on Gallifrey.&nbsp; </span>
-				<span class="A-licensed">5% of the population </span>
+					Virus (regeneration) is created by Thremix and released on Gallifrey.&nbsp;</span><span class="A-licensed">5% of the population </span>
 				<span class="A-audiobook">
 					<span class="A-audiobook">
 						<span class="A-licensed"> (2/3rds of which are male) </span>
@@ -4241,9 +4247,7 @@ temporal grace system is capable of disabling the gun.</span><span class="A-audi
 				<span class="A-licensed">gain the benefits of</span>
 				<span class="A-audiobook">
 					<span class="A-audiobook">
-						<span class="A-licensed"> regeneration</span> which, becomes known as the Legacy of Rassilon.
-					</span>&nbsp; </span>
-				<span class="A-licensed">However the virus also causes about 10% of the population of Gallifrey to die.&nbsp; </span>
+						<span class="A-licensed"> regeneration</span> which, becomes known as the Legacy of Rassilon.&nbsp;</span></span><span class="A-licensed">However the virus also causes about 10% of the population of Gallifrey to die.&nbsp; </span>
 				<span class="A-notbbc">
 					<span class="A-licensed">Rassilon gains the ability to regenerate at this time.&nbsp;</span>
 				</span>
@@ -4823,14 +4827,13 @@ records this in The Worshipful and Ancient Law of Gallifrey.</span>
 				<br>
 				<br>
 				<span class="A-game">1403&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; (1403 after the Eye of Harmony)
-					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Rassilon removes the secret of Perpetual
-					Regeneration from the Matrix.
-					<br>
+					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span class="A-tv">The Time Lord </span>Rassilon <span class="A-tv">removes and redacts the Timeless Child's secrets of Perpetual
+					Regeneration from the Matrix.&nbsp;</span></span><span class="A-audiobook">He leaves a false history indicating that Rassilon&nbsp;</span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed">and the biosythesist Thremix&nbsp;</span></span></span><span class="A-audiobook">invented Regeneration.&nbsp;</span><span class="A-game"><br>
 					<br>
 				</span>
 				<span class="A-audiobook">?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Garvond tries to destroy the Matrix.&nbsp;
-					The Time Lord use filters to sanitize the Matrix.&nbsp; The Garvond is trapped in the Dark Matrix, a distillation of
-					the evil and aggression of the dead Time Lords.&nbsp; The Dark Matrix exists under the Citadel.&nbsp; It's existence
+					The Time Lord use filters to sanitize the Matrix and the Garvond ends up trapped in the Dark Matrix, a distillation of
+					the evil and aggression of the dead Time Lords. The Dark Matrix is located under the Citadel but its existence
 					is forgotten and becomes a legend.
 					<br><br></span><span class="A-tv"><span class="A-licensed">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (since the Dawn of Time /<span class="A-fanon"> possibly after the Eternal Wars??)</span><br>&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Althrace use the power of a White Hole to create the
@@ -5821,13 +5824,11 @@ Time War era.&nbsp; </span></span></span></span></span>&nbsp; &nbsp;
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The loss of their telepathic abilities
 						and their failure with the Minyans lead to a massive sense of guilt, helplessness and fatalism.&nbsp;They felt that
 						they had lost their Golden Age and a revival was necessary.&nbsp;The Gallifreyans begin to view Rassilon and Omega
-						as near mythical figures. &nbsp;Rassilon's knowledge of immortal, perpetual regeneration is a central to most of the
-						myths about him.&nbsp; They believe that only strict adherence to the customs and traditions established by Rassilon
-						can stop their society’s decay.&nbsp; </span>
-					<span class="A-audiobook">
-						<span class="A-tv">Many artifacts, created after Rassilon's death, are given his name.</span> Each generation of Time Lords devise increasingly
+						as near mythical figures.&nbsp;Rassilon's knowledge of immortal, perpetual regeneration is a central to most of the
+						myths about him.&nbsp;They believe that only strict adherence to the customs and traditions established by Rassilon
+						can stop their society’s decay.&nbsp;</span><span class="A-audiobook"><span class="A-tv">Many artifacts, created after Rassilon's death, are given his name.</span> Each generation of Time Lords devise increasingly
 						complicated traditions and rites to prevent the Gallifreyan people from realizing how boring life on Gallifrey is.
-						&nbsp;The Gallifreyans no longer dare to examine their own future.&nbsp;
+						The Gallifreyans no longer dare to examine their own future.&nbsp;
 						<br>
 					</span>
 				</p>
