--- a/rootimeline3.html
+++ b/rootimeline3.html
@@ -282,6 +282,15 @@
 						</span>
 					</span>
 				</p>
+				<div style="text-align: center;">
+					<center>
+						<p>
+							<img alt="" src="images/patience.jpg">
+							<br>
+							<span class="A-game">Patience?</span>
+						</p>
+					</center>
+				</div>
 				<p>
 					<span class="A-game">
 						<span class="A-infinity">??&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Patience lives in the House of Lungbarrow
@@ -304,9 +313,8 @@
 						</span>
 					</span>
 					<span class="A-tv">
-						<span class="A-licensed">ages before The Doctor's Wife)</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+						<span class="A-licensed">ages before The Doctor's Wife)</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 						</span>
-					<br>
 					<span class="A-game">
 						<span class="A-infinity">
 							<span class="A-audiobook">
