--- a/rootimeline5.html
+++ b/rootimeline5.html
@@ -6224,7 +6224,7 @@ everything about Project Alpha to the public. Braxiatel and Narvin <span class="
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; Shazar is half Gallifreyan, and has access to
 Gallifreyan Technology and science.&nbsp; He was once a Time Lord who
-renegaded in the name of power.&nbsp; He tried to conquer Earth but the
+renegaded in the name of power.&nbsp; He tried to conquer the Earth but the
 Time lords stopped him and sentenced him and his TARDIS to
 diminutisation.&nbsp; He was trapped inside the disabled shrunken
 capsule and left on Earth.&nbsp; As punishment he would only be
@@ -7776,25 +7776,7 @@ actions. </span>
 					the Doctor has built an improved sonic screwdriver.&nbsp;
 					<br>
 				</span>
-				<span class="A-notbbc"></span>
-				<center>
-					<p>
-						<img alt="" src="images/president.jpeg">
-					</p>
-				</center>
-				<p>
-					<span class="A-audiobook">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; President </span>
-					<span class="A-audiobook">Eldhind</span>
-					<span class="A-audiobook">
-						<span class="A-licensed"> (aka Pandad IV
-							<span class="A-game">aka Pandar V)</span>
-						</span>
-						<span class="A-game"></span>
-					</span>
-					<span class="A-audiobook">
-						regenerates.</span>
-				</p>
-				<p>
+				<span class="A-notbbc"></span><p>
 					<span class="A-fanon">749&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Season 13 occurs in this range.</span>
 				</p>
 				<p>
@@ -7867,18 +7849,7 @@ actions. </span>
 							brain is discovered and </span>
 						<span class="A-tv">
 							<span class="A-audiobook">presumed</span>
-							destroyed.</span>&nbsp; By the end of this story there a 70 members of the Sisterhood of Karn.&nbsp;</span>
-				</p>
-				<p>
-					<span class="A-licensed">749~ &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</span>
-					<span class="A-licensed">(early 4th Doctor and Sarah-Jane) </span>
-					<br class="A-licensed">
-					<span class="A-licensed">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Return of the Daleks:
-						Having escaped his diminutized TARDIS, the half Gallifreyan Time Lord renegade named Shazar allies himself with the
-						Daleks and captures the Doctor’s TARDIS.&nbsp; The Daleks attempt to make a fleet of TARDIS clones but the Doctor and
-						the Lord President sabotage his plan. &nbsp;</span>
-				</p>
-				<p>
+							destroyed.</span>&nbsp; By the end of this story there a 70 members of the Sisterhood of Karn.&nbsp;</span></p><p>
 					<span class="A-audiobook">
 						<span class="A-audiobook">749&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (immediately after Brain of Morbius)
 							<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; High Priestess Ohica
@@ -7886,7 +7857,32 @@ actions. </span>
 							and Morbius use the Time Scoop to bring </span>seven of Iris's incarnations (some of them from the future) to the
 						Death Zone and force them to fight several aliens (including Voord, Zarbi, and Mechanoids). &nbsp;Iris defeats Morbius
 						and Ohica sends her to Makorna around the year 970 AD. &nbsp;While there she learned that the Doctor had been exiled
-						to Sol III by the Time Lords. &nbsp;She uses Green Magic to create the Verdigris to "rescue" the Doctor.&nbsp;&nbsp;</span>
+						to Sol III by the Time Lords. &nbsp;She uses Green Magic to create the Verdigris to "rescue" the Doctor.&nbsp;&nbsp;</span></p>
+				<p>
+					<span class="A-licensed">749~ &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</span>
+					<span class="A-licensed">(early 4th Doctor and Sarah-Jane / 200 years after Shazar was&nbsp;diminutized by the Time Lords) </span>
+					<br class="A-licensed">
+					<span class="A-licensed">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Return of the Daleks:
+						Having escaped his diminutized TARDIS, the half Gallifreyan Time Lord renegade named Shazar allies himself with the
+						Daleks and captures the Doctor’s TARDIS.&nbsp; The Daleks attempt to make a fleet of TARDIS clones but the Doctor and
+						the Lord President sabotage his plan. &nbsp;</span>
+				</p><center>
+					<p>
+						<img alt="" src="images/president.jpeg">
+					</p>
+				</center>
+				<p>
+					<span class="A-audiobook"><span class="A-licensed">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+(after Return of the Daleks)&nbsp;</span><br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; President </span>
+					<span class="A-audiobook">Eldhind</span>
+					<span class="A-audiobook">
+						<span class="A-licensed"> (aka Pandad IV
+							<span class="A-game">aka Pandar V)</span>
+						</span>
+						<span class="A-game"></span>
+					</span>
+					<span class="A-audiobook">
+						regenerates.</span>
 				</p>
 				<p>
 					<span class="A-audiobook">
@@ -9159,6 +9155,7 @@ continue to be lead lined until at least Appropriation.&nbsp;</span><span class=
 					<br class="A-game">
 					<span class="A-game">759 &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; (no more then 2 decades before the Doctor turned 761)
 						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Arcalian Maranodulandur
+
 
 						graduates from the Academy. &nbsp;Right after graduation, a cousin from her house gets her a position in the CIA. &nbsp;
 						<br>
