--- a/roobiology.html
+++ b/roobiology.html
@@ -256,10 +256,7 @@
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave&nbsp;</span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.</span>
-They smell of tangy celestial potental. The frames of some looms are
-silver. A new loom probably takes over 11 years to produce its first
-loomling. </span>
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.</span> They smell of tangy celestial potental. The frames of some looms are silver. A new loom probably takes over 11 years to produce its first loomling. </span>
 				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
 					its genius loci. This creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
@@ -978,22 +975,12 @@ This allows them to hide from predators that hunt by scent. </span>They have a w
 				<span class="A-game">Combined with the enhanced skin, a Gallifreyan can easily survive twice as long as a a human can in most hostile environments.
 				</span>
 				<span class="A-audiobook">
-					<span class="A-tv">With an oxygen supply this allows them to remain conscious for 6 minutes
-						<span class="A-audiobook">and survive up to 20 minutes</span> in space unprotected. </span>Without an oxygen supply they will only have 3 minutes
-					of consciousness.&nbsp;</span><span class="A-game"><span style="color: red;">Despite
-the above mentioned barriers, an unprotected Gallifreyan's eyes will be
-permanently destroyed if exposed to the cold and vacuum of space for
-too many minutes. </span>Most humans are stronger then the average Gallifreyan </span>
-				<span class="A-audiobook">
-					<span class="A-tv">
-						<span class="A-licensed">
-							<span class="A-audiobook">
+					<span class="A-tv">With an oxygen supply this allows them to remain conscious for 6 minutes <span class="A-audiobook">and survive up to 20 minutes</span> in space unprotected. </span>Without an oxygen supply they will only have 3 minutes
+					of consciousness. </span><span class="A-tv">Despite the above mentioned barriers, an unprotected Gallifreyan's eyes will be permanently destroyed if exposed to the cold and vacuum of space for too many minutes. </span><span class="A-game">Most humans are stronger then the average Gallifreyan </span>
+						<span class="A-audiobook">
 								<span class="A-licensed">(but, due to their second heart, and exposure to the Untempered Schism,
 									<span class="A-audiobook">Time Lords</span> have </span>
-								<span class="A-licensed">incredible</span> strength for their size). </span>
-						</span>
-					</span>
-				</span>
+								<span class="A-licensed">incredible</span> strength for their size) </span>
 				<span class="A-tv">They can remain conscious when exposed to G-forces that would kill a human.</span>
 			</div>
 			<div class="section">
@@ -1006,11 +993,10 @@ too many minutes. </span>Most humans are stronger then the average Gallifreyan <
 					hours of sleep a day, some Gallifreyans can even get by on a decade of sleep every 100 years. Gallifreyans might be
 					able to sleep standing up. Gallifreyan's with only one heart will find that they need much more sleep then a two hearted
 					Gallifreyan. Gallifreyans rarely dream, but when they do, they sometimes dream of choosing their next bodies, being
-					able to fly, becoming the opposite sex, and bearing child</span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook">.
+					able to fly, becoming the opposite sex, and bearing child</span><span class="A-notbbc">rene. </span>
 					<span class="A-fanon">Because
 						<span class="A-tv">dreams can access the astral vortex,</span>
 					</span>
-				</span>
 				<span class="A-audiobook">
 					<span class="A-tv">Gallifreyans who have nightmares (a very rare occurrence),</span> or find themselves in near-death states, sometimes
 					meet their Gods (Time, Death, Pain, etc). Often a deal or agreement is made and sometimes the Gallifreyan becomes that
